# AppSAFTEC

./: .gitignore  README.md  create-setup.bat  main.py  publish.bat  pyproject.toml  runtime_imports.py  version.py
InnoSetup/: installer.iss
app/: main.py  requirements.txt  runtime_imports.py
app/app/: .fleting
app/configs/: app_config.py  database.py  routes.py
app/controllers/: esus_treina_controller.py  exit_controller.py  plan_ceaf_controller.py  sei_caj_controller.py  sei_dma_controller.py  sigaf_contrapartida_controller.py  sigaf_prefeitura_controller.py  simpas_entradas_saidas_controller.py  simpas_estoque_controller.py  test_controller.py
app/core/: migrations.py  state.py  table_filters.py
app/data/: fleting.db
app/migrations/: 001_initial.py  002_create_relember_user.py
app/models/: esus_treina_model.py  exit_model.py  help_model.py  plan_ceaf_model.py  sei_caj_model.py  sei_dma_model.py  sigaf_prefeitura_model.py  (+4 more)
configs/: app_config.py  routes.py
controllers/: esus_treina_controller.py  exit_controller.py  help_controller.py  plan_ceaf_controller.py  sei_caj_controller.py  sei_dma_controller.py  sigaf_contrapartida_controller.py  sigaf_prefeitura_controller.py  simpas_estoque_controller.py  update_controller.py
core/: __init__.py  app.py  base_model.py  database.py  error_handler.py  i18n.py  logger.py  migrations.py  orm.py  router.py  table_filters.py
models/: esus_treina_model.py  exit_model.py  sei_dma_model.py  sigaf_prefeitura_model.py  simpas_entradas_saidas_model.py  simpas_estoque_model.py  update_model.py
seeds/: initial.py
(+38 files in other folders)
